@@ -16,13 +16,7 @@
  */
 package org.apache.nifi.processors.pulsar;
 
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.HashSet;
-import java.util.LinkedList;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import java.util.*;
 import java.util.concurrent.ExecutorCompletionService;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
@@ -46,6 +40,7 @@ import org.apache.nifi.processor.ProcessContext;
 import org.apache.nifi.processor.ProcessSession;
 import org.apache.nifi.processor.Relationship;
 import org.apache.nifi.processor.util.StandardValidators;
+import org.apache.nifi.processors.pulsar.utils.PropertyMappingUtils;
 import org.apache.nifi.pulsar.PulsarClientService;
 import org.apache.nifi.pulsar.cache.PulsarConsumerLRUCache;
 import org.apache.pulsar.client.api.Consumer;
@@ -188,41 +183,6 @@ public abstract class AbstractPulsarConsumerProcessor<T> extends AbstractProcess
             .required(false)
             .build();
 
-    public static final PropertyDescriptor EXPIRE_TIME_OF_INCOMPLETE_CHUNKED_MESSAGE = new PropertyDescriptor.Builder()
-            .name("EXPIRE_TIME_OF_INCOMPLETE_CHUNKED_MESSAGE")
-            .displayName("Expire Time of Incomplete Chunked Message")
-            .description("If producer fails to publish all the chunks of a message then consumer can expire incomplete" +
-                    " chunks if consumer won't be able to receive all chunks in expire times (default 1 minute).")
-            .addValidator(StandardValidators.TIME_PERIOD_VALIDATOR)
-            .defaultValue("60 sec")
-            .required(false)
-            .build();
-
-    public static final PropertyDescriptor AUTO_ACK_OLDEST_CHUNKED_ON_QUEUE_FULL = new PropertyDescriptor.Builder()
-            .name("AUTO_ACK_OLDEST_CHUNKED_ON_QUEUE_FULL")
-            .displayName("Auto Ack Oldest Chunked Message on Queue Full")
-            .description("Buffering large number of outstanding uncompleted chunked messages can create memory pressure" +
-                    " and it can be guarded by providing this @maxPendingChunkedMessage threshold. Once, consumer reaches" +
-                    " this threshold, it drops the outstanding unchunked-messages by silently acknowledging if this property" +
-                    " is true else it marks them for redelivery.")
-            .required(true)
-            .allowableValues("true", "false")
-            .defaultValue("false")
-            .build();
-
-    public static final PropertyDescriptor MAX_PENDING_CHUNKED_MESSAGE = new PropertyDescriptor.Builder()
-            .name("MAX_PENDING_CHUNKED_MESSAGE")
-            .displayName("Maximum Pending Chunked Messages")
-            .description("Buffering large number of outstanding uncompleted chunked messages can create memory pressure " +
-                    "and it can be guarded by providing this @maxPendingChunkedMessage threshold. Once, consumer reaches" +
-                            " this threshold, it drops the outstanding unchunked-messages by silently acking or asking broker to" +
-                            " redeliver later by marking it unacked. This behavior can be controlled by the " +
-                            "AUTO_ACK_OLDEST_CHUNKED_ON_QUEUE_FULL property.")
-            .required(false)
-            .addValidator(StandardValidators.NON_NEGATIVE_INTEGER_VALIDATOR)
-            .defaultValue("10")
-            .build();
-
     public static final PropertyDescriptor CONSUMER_NAME = new PropertyDescriptor.Builder()
             .name("CONSUMER_NAME")
             .displayName("Consumer Name")
@@ -320,15 +280,32 @@ public abstract class AbstractPulsarConsumerProcessor<T> extends AbstractProcess
     protected static final Set<Relationship> RELATIONSHIPS;
 
     static {
+        List<PropertyDescriptor> descriptorList = new ArrayList<>();
+        descriptorList.add(PULSAR_CLIENT_SERVICE);
+        descriptorList.add(TOPICS);
+        descriptorList.add(TOPICS_PATTERN);
+        descriptorList.add(SUBSCRIPTION_NAME);
+        descriptorList.add(SUBSCRIPTION_INITIAL_POSITION);
+        descriptorList.add(CONSUMER_NAME);
+        descriptorList.add(ASYNC_ENABLED);
+        descriptorList.add(MAX_ASYNC_REQUESTS);
+        descriptorList.add(ACK_TIMEOUT);
+        descriptorList.add(AUTO_UPDATE_PARTITIONS);
+        descriptorList.add(AUTO_UPDATE_PARTITION_INTERVAL);
+        descriptorList.add(PRIORITY_LEVEL);
+        descriptorList.add(RECEIVER_QUEUE_SIZE);
+        descriptorList.add(SUBSCRIPTION_TYPE);
+        descriptorList.add(CONSUMER_BATCH_SIZE);
+        descriptorList.add(MESSAGE_DEMARCATOR);
+        descriptorList.add(MAPPED_FLOWFILE_ATTRIBUTES);
+        descriptorList.add(REPLICATE_SUBSCRIPTION_STATE);
 
-        PROPERTIES = List.of(PULSAR_CLIENT_SERVICE, TOPICS, TOPICS_PATTERN, SUBSCRIPTION_NAME,
-                SUBSCRIPTION_INITIAL_POSITION, CONSUMER_NAME, ASYNC_ENABLED, MAX_ASYNC_REQUESTS, ACK_TIMEOUT,
-                AUTO_UPDATE_PARTITIONS, AUTO_UPDATE_PARTITION_INTERVAL, PRIORITY_LEVEL, RECEIVER_QUEUE_SIZE,
-                SUBSCRIPTION_TYPE, CONSUMER_BATCH_SIZE, MESSAGE_DEMARCATOR, MAPPED_FLOWFILE_ATTRIBUTES,
-                REPLICATE_SUBSCRIPTION_STATE, AUTO_ACK_OLDEST_CHUNKED_ON_QUEUE_FULL,
-                EXPIRE_TIME_OF_INCOMPLETE_CHUNKED_MESSAGE, MAX_PENDING_CHUNKED_MESSAGE);
+        PROPERTIES = Collections.unmodifiableList(descriptorList);
 
-        RELATIONSHIPS = Set.of(REL_SUCCESS);
+        Set<Relationship> relationshipSet = new HashSet<>();
+        relationshipSet.add(REL_SUCCESS);
+        RELATIONSHIPS = Collections.unmodifiableSet(relationshipSet);
+
     }
 
     private PulsarClientService pulsarClientService;
@@ -511,10 +488,6 @@ public abstract class AbstractPulsarConsumerProcessor<T> extends AbstractProcess
                 .autoUpdatePartitionsInterval(context.getProperty(AUTO_UPDATE_PARTITION_INTERVAL)
                         .asTimePeriod(TimeUnit.SECONDS).intValue(), TimeUnit.SECONDS)
                 .ackTimeout(context.getProperty(ACK_TIMEOUT).asTimePeriod(TimeUnit.MILLISECONDS).intValue(), TimeUnit.MILLISECONDS)
-                .autoAckOldestChunkedMessageOnQueueFull(context.getProperty(AUTO_ACK_OLDEST_CHUNKED_ON_QUEUE_FULL).asBoolean())
-                .expireTimeOfIncompleteChunkedMessage(context.getProperty(EXPIRE_TIME_OF_INCOMPLETE_CHUNKED_MESSAGE)
-                        .asTimePeriod(TimeUnit.SECONDS), TimeUnit.SECONDS)
-                .maxPendingChunkedMessage(context.getProperty(MAX_PENDING_CHUNKED_MESSAGE).asInteger())
                 .priorityLevel(context.getProperty(PRIORITY_LEVEL).asInteger())
                 .receiverQueueSize(context.getProperty(RECEIVER_QUEUE_SIZE).asInteger())
                 .subscriptionType(SubscriptionType.valueOf(context.getProperty(SUBSCRIPTION_TYPE).getValue()))
@@ -575,7 +548,7 @@ public abstract class AbstractPulsarConsumerProcessor<T> extends AbstractProcess
     protected Map<String, String> getMappedFlowFileAttributes(ProcessContext context, final Message<GenericRecord> msg) {
         String mappings = context.getProperty(MAPPED_FLOWFILE_ATTRIBUTES).getValue();
 
-        return PropertyMappingUtils.getMappedValues(mappings, 
+        return PropertyMappingUtils.getMappedValues(mappings,
         		(p) -> PULSAR_MESSAGE_KEY.equals(p) ? msg.getKey() : msg.getProperty(p));
     }
     
